add change password handler
